fix buttons on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@
 .carousel_track{
     display: flex;
     width: 1260px;
+    height: 100%;
     transition: .5s;
 }
 
@@ -151,6 +152,14 @@
         align-items: center;
         width: 360px;
         height: 100%;
+    }
+
+    .slide_one_button{
+        height: 25px;
+    }
+
+    .slide_two_button{
+        height: 20px;
     }
 
     .slide_one_logo_container{
